Fix viewport overflow on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,3 +27,8 @@
 code {
   @apply bg-base-100/50 rounded-field px-2;
 }
+
+html,
+body {
+  @apply w-full overflow-x-hidden;
+}
